--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -16,6 +16,28 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul> -->
+
+  <div style="background-color: darkolivegreen; height: 70px; text-align: center">
+    <button style="background-color: white; border: none; color: darkolivegreen;
+    padding: 10px 25px;
+    font-size: 16px;
+    display: block; margin-top: 15px; margin-right: 15px;
+    border-radius: 3px; position: absolute; right: 0;"  >Sign In</button>
+  </div>
+
+<div style="text-align: center"> 
+  <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-size: 30px; font-weight: bolder">Health Training App </h1>
+</div>
+<div class="mod-div">
+  <form>
+    <input type="text" placeholder="Enter your Email or Username *" class="mod-input">
+    <br>
+    <input type="text" placeholder="Enter your Password *" class="mod-input">
+    <br>
+    <button class="mod-button">Login</button>
+  </form>
+</div>
 
 <router-outlet></router-outlet>
