--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.mod-button {
+    background-color: darkolivegreen;
+    border: none;
+    color:white;
+    padding: 14px 30px;
+    font-size: 16px;
+    display: inline-block;
+    border-radius: 3px
+}
+
+.mod-input {
+    width: 50%; 
+    height: 40px; 
+    margin-bottom: 15px;
+    border-radius: 3px;
+    font-size: 18px;
+    text-align: center
+}
+
+.mod-div {
+    width: 600px;
+    height: 170px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border: 2px solid black;
+
+    text-align: center;
+    margin-top: 200px;
+    padding: 30px;
+}
+
+body,html {
+    margin: 0;
+    padding: 0
+}
