--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,12 @@
   </li>
 </ul> -->
 
-<app-login></app-login>
+<div style="background-color: darkolivegreen; height: 70px; text-align: center">
+  <button style="background-color: white; border: none; color: darkolivegreen;
+  padding: 10px 25px;
+  font-size: 16px;
+  display: block; margin-top: 15px; margin-right: 15px;
+  border-radius: 3px; position: absolute; right: 0;"  >Sign In</button>
+</div>
 
 <router-outlet></router-outlet>
