--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,15 +8,15 @@
 </div>
 <br>
 <br>
-<div>
+<div style="display: flex;">
   <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
-   box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block">
-   <h1 style="color: darkolivegreen; text-align: center; 
+   box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block;">
+   <h1 style="color: darkolivegreen; text-align: center; float: left; word-wrap: break-word;
    position: relative; top: 40%; transform: translateY(-50%)"> Fitness Track</h1>
   </div>
   <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
-  box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block">
-  <h1 style="color: darkolivegreen; text-align: center; 
-  position: relative; top: 50%; transform: translateY(-50%)"> Track</h1>
+  box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block;">
+  <h1 style="color: darkolivegreen; text-align: center;position: relative; top: 40%; transform: translateY(-50%);
+  display: flex; justify-content: center; align-content: center">sdfjsdfjsfj Track</h1>
  </div>
 </div>
