--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,21 +2,22 @@
   dashboard works!
 </p> -->
 
-<div style="height: 20px; font-family: -apple-system, BlinkMacSystemFont, 
-'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
-  <h1 style="padding-left: 20px; color: darkolivegreen">Dashboard</h1>
+<div style="height: 40px; font-family: -apple-system, BlinkMacSystemFont, 
+'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+  <h1 style="padding-left: 20px; color: rgb(22, 24, 18)">Dashboard</h1>
 </div>
+<hr>
 <br>
 <br>
 <div style="display: flex;">
   <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
    box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block;">
    <h1 style="color: darkolivegreen; text-align: center; float: left; word-wrap: break-word;
-   position: relative; top: 40%; transform: translateY(-50%)"> Fitness Track</h1>
+   position: relative; top: 40%; transform: translateY(-50%); margin-left: 10%; margin-right: 10%"> Fitness Track</h1>
   </div>
   <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
   box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block;">
   <h1 style="color: darkolivegreen; text-align: center;position: relative; top: 40%; transform: translateY(-50%);
-  display: flex; justify-content: center; align-content: center">sdfjsdfjsfj Track</h1>
+  display: flex; justify-content: center; align-content: center">Knowledge Track</h1>
  </div>
 </div>
