--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,18 +9,25 @@
 <hr>
 <br>
 <br>
-<div style="display: flex;">
+<div>
+  <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
+   box-shadow: 0 6px 16px 0 darkolivegreen; float: left">
     <a href="www.google.com">
-  <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
-   box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block;">
-   <h1 style="color: darkolivegreen; text-align: center; float: left; word-wrap: break-word;
-   position: relative; top: 40%; transform: translateY(-50%); margin-left: 10%; margin-right: 10%">
-    Fitness Track</h1>
-  </div>
+      <div style="height:  200px; width: 200px">
+          <h1 style="color: darkolivegreen; text-align: center; float: left; word-wrap: break-word;
+          position: relative; top: 40%; transform: translateY(-50%); margin-left: 10%; margin-right: 10%">
+           Fitness Track</h1>
+      </div>
     </a>
+  </div>
   <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
-  box-shadow: 0 6px 16px 0 darkolivegreen; display: inline-block;">
-  <h1 style="color: darkolivegreen; text-align: center;position: relative; top: 40%; transform: translateY(-50%);
-  display: flex; justify-content: center; align-content: center">Knowledge Track</h1>
+  box-shadow: 0 6px 16px 0 darkolivegreen;  float: left">
+  <a href="www.google.com">
+      <div style="height:  200px; width: 200px">
+          <h1 style="color: darkolivegreen; text-align: center; float: left; word-wrap: break-word;
+          position: relative; top: 40%; transform: translateY(-50%); margin-left: 10%; margin-right: 10%">
+           Knowledge Track</h1>
+      </div>
+  </a>
  </div>
 </div>
