--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
 <div>
   <div style="height: 200px; width: 200px; margin: 40px; box-sizing: border-box;
    box-shadow: 0 6px 16px 0 darkolivegreen; float: left">
-    <a href="www.google.com">
+    <a routerLink='/fitness-track' (click) = getFitnessTrackData()>
       <div style="height:  200px; width: 200px">
           <h1 style="color: darkolivegreen; text-align: center; float: left; word-wrap: break-word;
           position: relative; top: 40%; transform: translateY(-50%); margin-left: 10%; margin-right: 10%">
