not able to add icons, still trying

--- a/src/app/fitness-track/fitness-track.component.html
+++ b/src/app/fitness-track/fitness-track.component.html
@@ -1,3 +1,21 @@
-<p>
+<!-- <p>
   fitness-track works!
-</p>
+</p> -->
+<head>
+    <link rel="icon" type="image/png" href="/assets/time_clock.png">
+    
+</head>
+
+<div>
+  <div style="height: 150px; box-sizing: border-box; 
+    box-shadow: 0 6px 16px 0 darkolivegreen;">
+    <div style="width: 15%; height: 150px; display: inline-block;
+      margin: 0 auto; padding-top: 20px">
+      <h1 style="color: darkolivegreen;">Fitness Info</h1>
+    </div>
+    <div style="width: 15%; height: 150px; display: inline-block; vertical-align: middle">
+        <link rel="icon" type="image/png" href="/assets/time_clock.png">
+        
+    </div>
+  </div>
+</div>
