updated fitness info panel with hrs left

--- a/src/app/fitness-track/fitness-track.component.html
+++ b/src/app/fitness-track/fitness-track.component.html
@@ -1,6 +1,3 @@
-<!-- <p>
-  fitness-track works!
-</p> -->
 <head>
     <link rel="icon" type="image/png" href="/assets/time_clock.png">
     
@@ -14,8 +11,14 @@
       <h1 style="color: darkolivegreen;">Fitness Info</h1>
     </div>
     <div style="width: 15%; height: 150px; display: inline-block; vertical-align: middle">
-        <link rel="icon" type="image/png" href="/assets/time_clock.png">
-        
+      <div style="height: 93px; text-align: center; vertical-align: middle">
+        <i class="material-icons" style="font-size:90px;
+        color: darkolivegreen; text-shadow:2px 2px 4px darkolivegreen">update</i>
+      </div>
+      <div style="text-align: center; vertical-align: middle; height: auto">
+        <h2 style="color: darkolivegreen">Hours left: {{workoutDetails.hrsleft}}</h2>
+      </div>
+      
     </div>
   </div>
 </div>
