--- a/src/app/fitness-track/fitness-track.component.html
+++ b/src/app/fitness-track/fitness-track.component.html
@@ -1,24 +1,54 @@
-<head>
-    <link rel="icon" type="image/png" href="/assets/time_clock.png">
-    
-</head>
-
-<div>
-  <div style="height: 150px; box-sizing: border-box; 
-    box-shadow: 0 6px 16px 0 darkolivegreen;">
-    <div style="width: 15%; height: 150px; display: inline-block;
-      margin: 0 auto; padding-top: 20px">
-      <h1 style="color: darkolivegreen;">Fitness Info</h1>
-    </div>
-    <div style="width: 15%; height: 150px; display: inline-block; vertical-align: middle">
-      <div style="height: 93px; text-align: center; vertical-align: middle">
-        <i class="material-icons" style="font-size:90px;
-        color: darkolivegreen; text-shadow:2px 2px 4px darkolivegreen">update</i>
-      </div>
-      <div style="text-align: center; vertical-align: middle; height: auto">
-        <h2 style="color: darkolivegreen">Hours left: {{workoutDetails.hrsleft}}</h2>
-      </div>
-      
+<div style="display: flex; flex-direction: row;
+box-sizing: border-box; 
+box-shadow: 0 6px 16px 0 darkolivegreen;">
+  <div style="width: 20%; height: 90px; display: flex">
+    <div style="width: 100%; height: 100%; display: flex;
+      justify-content: center; align-items: center;">
+      <h1 style="color: darkolivegreen">Fitness Info: </h1>
     </div>
   </div>
+  <div style="width: 20%; height: 90px; display: flex; flex-direction: column;">
+    <div style="height: 60px; width: 100%; display: flex; justify-content: center;
+    align-items: center">
+        <i class="material-icons" style="font-size:50px;
+        color: darkolivegreen; text-shadow:2px 2px 4px darkolivegreen">update</i>
+    </div>
+    <div style="display: flex; justify-content: center; align-items: center">
+        <h2 style="color: darkolivegreen">Hours left: {{workoutDetails.hrsleft}}</h2>
+    </div>
+  </div>
+    <!-- <div class="fitness-div">
+      <div class="fitness-pic-div">
+        <i class="material-icons" style="font-size:75px;
+        color: darkolivegreen; text-shadow:2px 2px 4px darkolivegreen">update</i>
+      </div>
+      <div class="fitness-h2-div">
+        <h4 style="color: darkolivegreen">Hours left: {{workoutDetails.hrsleft}}</h4>
+      </div>  
+    </div>
+    <!-- <div class="fitness-div">
+      <div class="fitness-pic-div">
+        <i class='fas fa-rupee-sign fitness-i'></i>
+      </div>
+      <div class="fitness-h2-div">
+        <h2 style="color: darkolivegreen">Money: {{workoutDetails.moneyCollected}}</h2>
+      </div>  
+    </div>
+    <div class="fitness-div">
+      <div class="fitness-pic-div">
+        <i class='fas fa-dumbbell fitness-i'></i>
+      </div>
+      <div class="fitness-h2-div">
+        <h2 style="color: darkolivegreen">Type: {{workoutDetails.workoutType}}</h2>
+      </div>  
+    </div>
+    <div class="fitness-div">
+      <div class="fitness-pic-div">
+        <i class='far fa-calendar-alt fitness-i'></i>
+      </div>
+      <div class="fitness-h2-div">
+        <h2 style="color: darkolivegreen">Last Wrkt: {{workoutDetails.workoutTime}}</h2>
+      </div>  
+    </div>
+  </div> -->
 </div>
