--- a/src/app/fitness-track/fitness-track.component.html
+++ b/src/app/fitness-track/fitness-track.component.html
@@ -42,4 +42,20 @@
     </div>
   </div>
 
+
+<div style="width: 20%; min-height: 100%; float: right; display: flex;
+ flex-flow: column;"> size aya
+  <!-- <div style="display: flex; justify-content: flex-end; margin: 30px; flex: 1 1">
+      <i class="material-icons" style="color: darkolivegreen; font-size: 65px;
+      transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;">
+      add_circle</i>
+  </div>
+  <div style="display: flex;justify-content: center; align-items: center; flex: 1 1">
+      <button style="background-color: white; border: none; color: darkolivegreen;
+      padding: 10px 25px;
+      font-size: 16px;
+      display: block; margin-top: 15px; margin-right: 15px;
+      border-radius: 3px; position: absolute; right: 0;"  >Add Activity</button>
+  </div> -->
+</div>
 </div>
