learning bootstrap, trying a sample page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div style="background-color: darkolivegreen; height: 70px; text-align: center">
+<!-- <div style="background-color: darkolivegreen; height: 70px; text-align: center">
   <button style="background-color: white; border: none; color: darkolivegreen;
   padding: 10px 25px;
   font-size: 16px;
   display: block; margin-top: 15px; margin-right: 15px;
   border-radius: 3px; position: absolute; right: 0;"  >Sign In</button>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
