--- a/src/app/sample/sample.component.css
+++ b/src/app/sample/sample.component.css
@@ -1,1 +1,36 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+
+.header {
+    background-color: darkred; 
+    height: 50px; 
+    width: 100%;
+    top: 0;
+    left: 0;
+    color: aliceblue;
+    position: absolute;
+    z-index: 1;
+} 
+.mid-div {
+    background-color: darkslategray; 
+    height: 70px; 
+    width: 100%;
+    color: aliceblue;
+    margin: 10px;
+    position: relative;
+    top: 100px;
+}
+.footer {
+    background-color: forestgreen; 
+    height: 60px; 
+    width: 100%;
+    color: aliceblue;
+    margin: 10px;
+    position: fixed;
+    top: 0;
+}
+html {
+    padding: 10px;
+    height: 3000px;
+}
+body {
+}
