changes to login page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,5 @@
-<!-- <p>
-  login works!
-</p> -->
 
-<div style="text-align: center"> 
+<!-- <div style="text-align: center"> 
 <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 30px; font-weight: bolder">Health Training App </h1>
 </div>
@@ -16,14 +13,20 @@
   <br>
   <button class="mod-button" (click)="login()" >Login</button>
 </form>
-</div>
+</div> -->
 
-<!-- <ul class="products">
-  <li *ngFor="let p of products; let i=index;">
-    <a routerLink="/product-details/{{p._id}}">
-      <span class="badge">{{i+1}}</span> {{p.prod_name}}
-    </a>
-    <button class="delete" title="delete product"
-      (click)="delete(p._id)">x</button>
-  </li>
-</ul> -->
+<div>
+  <div class="row">
+    <div class="col-9">
+        <img class="img-fluid" style="min-height: 100%"
+         src="../assets/blueberries-heart-health.jpg">
+         <div style="top: 28px; left: 50px; position: absolute">
+           <h1 class="display-4" style="color: aliceblue;"> Health </h1>
+            <h3 class="display-4" style="color: aliceblue;"> Training App </h3>
+         </div>
+    </div>
+    <div>
+      <h1> Sign in</h1>
+    </div>
+  </div>
+</div>
