--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
 
 <div>
   <div class="row">
-    <div class="col-9">
+    <div class="col-sm-9">
         <img class="img-fluid" style="min-height: 100%"
          src="../assets/blueberries-heart-health.jpg">
          <div style="top: 28px; left: 50px; position: absolute">
@@ -25,8 +25,26 @@
             <h3 class="display-4" style="color: aliceblue;"> Training App </h3>
          </div>
     </div>
-    <div>
-      <h1> Sign in</h1>
-    </div>
+    <div class="col-sm-3">
+        <div class="row">
+            <div class="card card-signin my-5">
+              <div class="card-body">
+                <h5 class="card-title text-center">Sign In</h5>
+                <form class="form-signin">
+                  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+                      <!-- Password -->
+                      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+                  <div class="custom-control custom-checkbox mb-3">
+                    <input type="checkbox" class="custom-control-input" id="customCheck1">
+                    <label class="custom-control-label" for="customCheck1">Remember password</label>
+                  </div>
+                  <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                  <hr class="my-4">
+                  <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
+                  </form>
+            </div>
+        </div>
+      </div>
+    </div> 
   </div>
 </div>
