--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,54 @@
-<p>
-  register works!
-</p>
+<body>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="card-body">
+          <h5 class="card-title text-center">Register</h5>
+          <p class="hint-text">Create your account. It's free and only takes a minute.</p>
+          <form class="form-signin">
+              <div class="input-container" style="margin-bottom: 8px;">
+                  <div class="row">
+                      <div class="col-md-6"><input type="text" class="form-control form-control-sm" style=" border-radius: 5px 5px 5px 5px" name="first_name" placeholder="First Name" required="required"></div>
+                      <div class="col-md-6"><input type="text" class="form-control form-control-sm" style=" border-radius: 5px 5px 5px 5px" name="last_name" placeholder="Last Name" required="required"></div>
+                    </div>  </div> 
+                    <div class="input-container"style="margin-bottom: 8px;">
+                        <div class="row">
+                            <div class="col-md-6">
+                              <input type="text" class="form-control form-control-sm" style=" border-radius: 5px 5px 5px 5px" name="height" placeholder="Height" required="required"></div>
+                            <div class="col-md-6"><input type="text" class="form-control form-control-sm" style=" border-radius: 5px 5px 5px 5px" name="weight" placeholder="Weight" required="required"></div>
+                          </div>  </div>   
+              <div class="input-container">
+                  <i class="fa fa-user icon mb-4 form-control-sm"></i>
+                  <input class="form-control mb-4 form-control-sm" type="text" placeholder="Username" name="usrnm">
+                  </div>   
+                  <div class="input-container">
+                  <i class="fa fa-envelope icon mb-4 form-control-sm"></i>
+                  <input class="form-control mb-4 form-control-sm" type="email" placeholder="Email Address" name="email">
+                  </div>
+                  <div class="input-container">
+                      <i class="fa fa-lock prefix icon mb-4"></i>
+                  <input class="form-control mb-4" type="password" placeholder="Password" name="password" required>
+                  
+                </div>
+                <div class="input-container">
+                    <i class="fa fa-phone icon mb-4 form-control-sm"></i>
+                    <input class="form-control mb-4 form-control-sm" type="tel" placeholder="Contact Number" name="contact" required>
+                  </div>
+                  <div class="row">
+                      <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <input type="submit" class="btn btn-lg btn-success btn-block" value="Sign Up">
+                      </div>
+                      <div class="col-xs-6 col-sm-6 col-md-6">
+                          <button class="btn btn-lg btn-primary btn-block btn-google"><i class="fab fa-google mr-2"></i>Sign Up with Google</button>
+                      </div>
+                    </div>
+                   
+            <div class="text-center">Already have an account? <a href="#">Sign in</a></div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
