modifications on register page:

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,7 +5,7 @@
       <div class="card card-signin my-5">
         <div class="card-body">
           <h5 class="card-title text-center" style="color:rgb(4, 99, 4); font-weight: bold;">Join With Us</h5>
-          <p class="hint-text text-center">Do you want to know yourself better?</p>
+          <p class="hint-text text-center" style="margin-top:-30px;">Do you want to know yourself better?</p>
           <form class="form-signin">
 
             <div class="container">
@@ -41,6 +41,10 @@
                                        <input type="radio" class="custom-control-input" id="defaultInline2" name="inlineDefaultRadiosExample">
                                        <label class="custom-control-label"  for="defaultInline2">Female</label>
                                      </div>
+                                     <div class="custom-control custom-radio custom-control-inline" >
+                                        <input type="radio" class="custom-control-input" id="defaultInline3" name="inlineDefaultRadiosExample">
+                                        <label class="custom-control-label"  for="defaultInline3">Others</label>
+                                      </div>
                                </div> 
 
 
@@ -61,8 +65,8 @@
                         <input class="form-control mb-4 " style="border-left: 0px" type="password" placeholder="Password" name="password" required>
                     </div>
                       <div class="input-container">
-                          <i class="fa fa-check-circle icon mb-4 "></i>
-                          <input class="form-control mb-4 "  style="border-left: 0px" type="password" placeholder="Confirm Password" name="contact" required>
+                          <i class="fa fa-birthday-cake icon mb-4 "></i>
+                          <input class="form-control mb-4 "  style="border-left: 0px" type="text" placeholder="Age" name="contact" required>
                         </div>
                         <div class="input-container">
                         <div class="custom-file mb-3" >
@@ -89,7 +93,7 @@
                       </div>
                     </div>
                    
-            <div class=" hint-text text-center" style="margin-top:10px;">Already have an account? <a href="#">Sign in</a></div>
+            <div class=" hint-text text-center" style="margin-top:30px;">Already have an account? <a href="#">Sign in</a></div>
           </form>
         </div>
       </div>
