--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -16,3 +16,101 @@
     transform: translateY(-50%);
     top: 40%;
 }
+
+
+.center-block {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+
+    width: 150px;
+	height: 150px;
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+	
+	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    position: relative;
+   margin-top: -75px;
+    z-index: 99;
+  }
+
+  .input-container {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    width: 100%;
+    margin-bottom: 8px;
+    margin-top: 8px
+  }
+ 
+  .icon {
+    padding: 8px;
+   
+    border-width: 1px;
+
+    border-image: initial;
+    color:black;
+    min-width: 50px;
+    text-align: center;
+
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(199, 193, 193, 0.856) ;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-radius: 0;
+   
+   
+  }
+  
+  .form-control {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(199, 193, 193, 0.856) ;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-radius: 0;
+  }
+  .form-control.text1 {
+    width: 75%;
+   
+  }
+ 
+  
+  .form-control:focus{border-color:rgba(199, 193, 193, 0.856);   box-shadow: none; -webkit-box-shadow: none;} 
+  .has-error .form-control:focus{box-shadow: none; -webkit-box-shadow: none; border-color:red;}
+  .btn-save {
+   border-color: lightseagreen;
+    background-color:lightseagreen;
+  }
+ 
+   .add {
+    outline: none !important;
+    box-shadow: none;
+  
+    color: rgb(1, 29, 1); 
+   
+    
+    
+  }
+  .btn:focus,.btn:active {
+    outline: none !important;
+    box-shadow: none;
+ }
+
+ /* Bootstrap css */
+@import "https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css";
+
+/* Google Material icons */
+@import "http://fonts.googleapis.com/icon?family=Material+Icons";
+
+/* Propeller css */
+@import "dist/css/propeller.min.css";
+
+/* Bootstrap datetimepicker */
+@import "datetimepicker/css/bootstrap-datetimepicker.css";
+
+/* Propeller datetimepicker */
+@import "datetimepicker/css/pmd-datetimepicker.css";
