--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,3 +31,74 @@
   </a>
  </div>
 </div>
+<!-- Button HTML (to Trigger Modal) -->
+<a href="#myModal" role="button" class="btn btn-sm btn-primary shadow-none" style=" border-color: white;
+background-color:white;" data-toggle="modal"> <i class="fa fa-plus fa-3x add"></i></a>
+
+<!-- Modal HTML -->
+<div id="myModal" class="modal fade">
+  
+      <div class="modal-dialog modal-dialog-centered" role="document">
+       <div class="modal-content">
+        
+           <div class="modal-body">
+             <img class="img-rounded center-block" style="align-items: center;"alt="100*100"  src="../assets/Profile.png" data-holder-rendered="true">
+            
+             <div class="container">
+                <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6 mx-auto">
+            
+                    <div class="input-container"> 
+                         <!-- <input type="date" style=" width: 100%;"  class="form-control"  name="Date"></div> -->
+                         <div class="form-group pmd-textfield pmd-textfield-floating-label">
+                            <label class="control-label" for="datetimepicker4">Select Date</label>
+                            <input type="text" class="form-control" id="datetimepicker4">
+                        </div></div>
+                         <div class="input-container">
+                            <i class="fa fa-clock icon " aria-hidden="true"></i>
+                            <input class="form-control text1"  type="text" placeholder="Workout Time" name="Weight">
+                            </div> 
+                </div>
+            
+             <div class="col-sm-6 col-md-6 col-lg-6 mx-auto">
+                <div class="input-container">
+                    <select style=" width: 100%" class="form-control input-lg" >
+                        <option value="" selected disabled>Workout Type</option>
+                        <option value="">Running</option>
+                        <option value="">Walking</option>
+                        <option value="">Legs</option>
+                    </select>
+                  </div>
+            
+             <div class="input-container" style="margin-bottom: 8px;">
+                
+                <select style=" width: 100%" class="form-control input-lg" >
+                    <option value="" selected disabled>Food</option>
+                    <option value="">Healthy</option>
+                    <option value="">UnHealthy</option>
+                   
+                </select>
+                          
+                     </div> 
+                    </div>
+                 
+       </div>
+           <div class="modal-footer" style="margin-bottom:-20px;">
+               <button type="button" class="btn btn-primary btn-sm btn-save ">Save Activity</button>
+           </div>
+       </div>
+   </div>
+</div>
+<script>$(function () {
+    $('#myModal').modal('toggle');
+  });
+  $(function () {
+                $('#datetimepicker4').datetimepicker();
+            });
+	// Date picker only
+	$('#datepicker').datetimepicker({
+		format: 'DD-MM-YYYY'
+	});
+
+  </script>
+
