--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -48,12 +48,14 @@ background-color:white;" data-toggle="modal"> <i class="fa fa-plus fa-3x add"></
                 <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-6 mx-auto">
             
-                    <div class="input-container"> 
+                    <div class="input-container">
                          <!-- <input type="date" style=" width: 100%;"  class="form-control"  name="Date"></div> -->
-                         <div class="form-group pmd-textfield pmd-textfield-floating-label">
-                            <label class="control-label" for="datetimepicker4">Select Date</label>
-                            <input type="text" class="form-control" id="datetimepicker4">
-                        </div></div>
+                       
+                         <div class='input-group date'>
+                                <input type="text" class="form-control datepicker"/>
+                               
+                            </div>
+                        </div>
                          <div class="input-container">
                             <i class="fa fa-clock icon " aria-hidden="true"></i>
                             <input class="form-control text1"  type="text" placeholder="Workout Time" name="Weight">
@@ -89,16 +91,16 @@ background-color:white;" data-toggle="modal"> <i class="fa fa-plus fa-3x add"></
        </div>
    </div>
 </div>
-<script>$(function () {
+<script>
+    
+    $('.datepicker').datetimepicker({
+    format: 'DD-MM-YYYY HH:mm:ss'
+});
+$(function () {
+
     $('#myModal').modal('toggle');
   });
-  $(function () {
-                $('#datetimepicker4').datetimepicker();
-            });
-	// Date picker only
-	$('#datepicker').datetimepicker({
-		format: 'DD-MM-YYYY'
-	});
+ 
 
   </script>
-
+   
